fixed ipad layout issue with recommendation cards, switched px to rem

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -143,10 +143,10 @@ html {
 }
 //MARK: carousel navigation customization
 .carousel__prev {
-  left: -40px !important;
+  left: -2.75rem !important;
 }
 .carousel__next {
-  right: -40px !important;
+  right: -2.75rem !important;
 }
 // component animation
 .before-enter {
